Added various Endpoints. Article, Comment, Image, Tag Endpoints. NOT TESTED.